Probando requerimiento 1 9ta

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "scripts": {
     "test": "jest --verbose"
+
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
